objects/Objection__c.object
<CustomObject>
    <fields>
        <fullName>Example__c</fullName>
        <label>Example</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Full_Objection_Description__c</fullName>
        <label>Full Objection Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objection_Category__c</fullName>
        <label>Objection Category</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objection_Number__c</fullName>
        <label>Objection Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <description>List of common client objections and client service standard rebuttals.</description>
    <label>Objection Handling</label>
    <nameField>
        <label>Objection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objection Handling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Objection_Number__c</columns>
        <columns>Full_Objection_Description__c</columns>
        <columns>Objection_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Objection_List</fullName>
        <columns>Objection_Number__c</columns>
        <columns>Full_Objection_Description__c</columns>
        <columns>Objection_Category__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Objection List</label>
    </listViews>
    <recordTypes>
        <fullName>Objection</fullName>
        <active>true</active>
        <label>Objection</label>
    </recordTypes>
</CustomObject>